20230317
*Fix bug for fetch files (`make -DBATCH checksum` error).

20230228
*Cleanup code.

20230206
*Add to check for binary package file.
*Cleanup code.

20230202
*Cleanup code.

20230201
*Replace '\ ' -> '[[:space:]]'.

20230127
*Update man page.

20230125
*Cleanup code.
*Fix variable that should not be enclosed in double quotes.

20230124
*Fix trap action.
*Fix message about locked packages.
*Cleanup code.

20230119
*Enabled to handle locked packages with new "-U" option.
 If "-U" option is not present, locked packages are skipped.
 See pkg_replace(1).

20230118
*Variables containing file and directory are enclosed in double quotes.

20230117
*Fix trap action.

20230108
*Cleanup code.

20230107
*Fix typo.

20230106
*Cleanup code.
*Improved error handling.

20230105
*Fix error message due to broken packages dependency.
 However, this is not an essential solution.
 If "-dd", "-RR" option sets, you may see messages like
 "pkg_replace: 1: parameter not set".
 This type of message is no longer displayed.
*Cleanup code.

20230104
*Man page describes the precautions to be taken when using
 "-dd", "-RR" option.
*Cleanup code.

20230103
*Fix bug about checking installed packages.

20230102
*Fix bug about getting ports directory.

20230101
*Fix bug "-x" option with "-dd" ("-RR") option.

20221228
*More fix bug about "-N" option.

20221227
*If "-N" only set, don't install binary packages.
*More strictly dependencies checking for "-dd" or "-RR" option.

20221225
*More speedup checking dependencies about "-dd", "-RR" option by
 parallel execution.

20221223
*Add "--nocleandeps" option. Don't clean PKG_REPLACE_DB_DIR directory.

20221222
*Option "-dd" or "-RR", as fast as possible and strictly checking
 dependencies.

20221217
*Fix bugs related "-P" or "-PP" option
 If binary package file exists, pkg_replace gets dependencies from it.

20221216
*Fix bugs related "-PP" option.

20221215
*Fix bugs in find_package() and get_binary_pkgname().

20221214
*Fix bug in main().
