@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (March 17, 2023)"
-.Dd March 17, 2023
+.\" Modified by Ken DEGUCHI (March 20, 2023)"
+.Dd March 20, 2023
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
