@@ -1,3 +1,6 @@
+20230320
+*Fix handling path bugs in set_pkginfo_install() and set_pkginfo_replace().
+
 20230317
 *Fix bug for fetch files (`make -DBATCH checksum` error).
 
